--- a/Seapal_Gruppe_09/de.htwg.seapal.detp-master/Seapal/public/stylesheets/bootstrap/bootstrap.css
+++ b/Seapal_Gruppe_09/de.htwg.seapal.detp-master/Seapal/public/stylesheets/bootstrap/bootstrap.css
@@ -965,7 +965,7 @@ input,
 button,
 select,
 textarea {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
 label {
@@ -4321,7 +4321,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-search .search-query {
   padding: 4px 14px;
   margin-bottom: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   font-size: 13px;
   font-weight: normal;
   line-height: 1;
